cmake_minimum_required(VERSION 3.17)
project(project-mother)

add_subdirectory(00-example-project)
add_subdirectory(01-linked-list)
add_subdirectory(01-linked-list-test)
add_subdirectory(02-data-structure/06-list-base-stack)
add_subdirectory(02-data-structure/06-cllist-base-stack)
add_subdirectory(02-data-structure/06-calculator)
