cmake_minimum_required(VERSION 3.17)
project(project-mother)

add_subdirectory(00-benchmark/01-locality)
add_subdirectory(00-example-project)
add_subdirectory(01-linked-list)
add_subdirectory(01-linked-list-test)
add_subdirectory(02-data-structure/06-list-base-stack)
add_subdirectory(02-data-structure/06-cllist-base-stack)
add_subdirectory(02-data-structure/06-calculator)
add_subdirectory(02-data-structure/07-circular-queue)
add_subdirectory(02-data-structure/07-llist-base-queue)
add_subdirectory(02-data-structure/07-dll-base-deque)
add_subdirectory(02-data-structure/08-binary-tree)
add_subdirectory(02-data-structure/08-expression-tree)
add_subdirectory(02-data-structure/09-simple-heap)
add_subdirectory(02-data-structure/09-useful-heap)
add_subdirectory(02-data-structure/09-priority-queue)
