cmake_minimum_required(VERSION 3.17)
project(project-mother)

add_subdirectory(00-benchmark/01-locality)
add_subdirectory(00-example-project)
add_subdirectory(01-linked-list)
add_subdirectory(01-linked-list-test)
add_subdirectory(02-data-structure/02-recursion)
add_subdirectory(02-data-structure/03-double-linked-list)
add_subdirectory(02-data-structure/06-list-base-stack)
add_subdirectory(02-data-structure/06-cllist-base-stack)
add_subdirectory(02-data-structure/06-calculator)
add_subdirectory(02-data-structure/07-circular-queue)
add_subdirectory(02-data-structure/07-llist-base-queue)
add_subdirectory(02-data-structure/07-dll-base-deque)
add_subdirectory(02-data-structure/08-binary-tree)
add_subdirectory(02-data-structure/08-expression-tree)
add_subdirectory(02-data-structure/09-simple-heap)
add_subdirectory(02-data-structure/09-useful-heap)
add_subdirectory(02-data-structure/09-priority-queue)
add_subdirectory(02-data-structure/10-sorting)
add_subdirectory(02-data-structure/11-search)
add_subdirectory(02-data-structure/11-binary-search-tree)
add_subdirectory(02-data-structure/12-avl-tree)
add_subdirectory(02-data-structure/13-simple-hash-table)
add_subdirectory(02-data-structure/13-chaining-hash-table)
add_subdirectory(02-data-structure/14-adjacent-list-base-graph)
add_subdirectory(02-data-structure/14-alg-graph-dfs)
add_subdirectory(02-data-structure/14-alg-graph-bfs)
add_subdirectory(02-data-structure/14-minimum-spanning-tree)